tdf#152850: Fix bad scoping of MathML frac command

Change-Id: I4f5d0290e522fa6f3faccd26f74540abf848629b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147153
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>